ipad header alignment issue

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -2225,6 +2225,7 @@ img {
 	}
 	.navbar-nav > li {
 		width: auto;
+		width: 100% !important;
 	}
 	.navbar-default .navbar-nav > li > a {
 		white-space: nowrap;
